# tamkeen-ai-newsletter

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: broadcast.yml  weekly-digest.yml
docs/: APPROVAL_FLOW.md
scripts/: offline_dryrun.py
src/ai_pulse/: __init__.py  __main__.py  cli.py  compose.py  config.py  curate.py  dedup.py  deliver.py  ingest.py  logging_setup.py  models.py  pipeline.py  state.py  util.py
state/: seen.sqlite3
state/digests/: 2026-06-17.json  2026-06-18.json  2026-06-19.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-W25.json
tests/: conftest.py  test_compose.py  test_curate.py  test_dedup.py  test_deliver.py  test_ingest.py
